--- a/package.json
+++ b/package.json
@@ -2,23 +2,35 @@
   "name": "nuxt-cli",
   "version": "0.0.1",
   "description": "CLI for Nuxt.js Projects",
-  "main": "index.js",
-  "scripts": {
-    
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/nuxt/nuxt-cli.git"
-  },
   "keywords": [
     "nuxt",
     "nuxt.js",
     "nuxt cli"
   ],
-  "author": "Nuxt.js Team",
+  "repository": "nuxt/nuxt-cli",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/nuxt/nuxt-cli/issues"
+  "bin": {
+    "nuxt": "./bin/nuxt-cli.js",
+    "nuxt-cli": "./bin/nuxt-cli.js"
   },
-  "homepage": "https://github.com/nuxt/nuxt-cli#readme"
+  "files": [
+    "dist",
+    "bin"
+  ],
+  "scripts": {
+    "nuxt": "ts-node -e \"require('./src').bootstrap()\"",
+    "build": "rollup -c",
+    "lint": "eslint .",
+    "test": "yarn lint"
+  },
+  "devDependencies": {
+    "@nuxtjs/eslint-config-typescript": "^1.0.2",
+    "@rollup/plugin-typescript": "^4.1.1",
+    "@types/node": "^13.11.1",
+    "eslint": "^6.8.0",
+    "esm": "^3.2.25",
+    "rollup": "^2.6.1",
+    "ts-node": "^8.8.2",
+    "typescript": "^3.8.3"
+  }
 }
